--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
@@ -60,7 +59,7 @@
                     <td></td>
                     <td></td>
                     <td>Total</td>
-                    <td>{{ total }}</td>
+                    <td>{{ orderPrice }}</td>
                 </tr>
             </tfoot>
         </table>
