--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -16,7 +16,7 @@
 
         <div class="columns">
             <div class="column is-12">
-                <button class="button is-primary is-pulled-right">
+                <button class="button is-primary is-pulled-right" onclick="openModal()">
                     <span class="icon"><i class="fas fa-plus"></i></span>
                     <span>Agregar</span>
                 </button>
@@ -24,6 +24,32 @@
         </div>
         <div class="columns">
             <div class="column is-12" id="orders">
+            </div>
+        </div>
+        <div class="modal" id="modal">
+            <div class="modal-background"></div>
+            <div class="modal-card">
+                <header class="modal-card-head">
+                    <p class="modal-card-title">Agregar producto</p>
+                    <button class="delete" aria-label="close" onclick="closeModal()"></button>
+                </header>
+                <section class="modal-card-body">
+                    <form>
+                        <div id="select" class="field">
+                        </div>
+                        <br>
+                        <div class="field">
+                            <label>Cantidad</label>
+                            <div class="control">
+                                <input class="input" type="number">
+                            </div>
+                        </div>
+                    </form>
+                </section>
+                <footer class="modal-card-foot">
+                    <button class="button is-success">Guardar</button>
+                    <button class="button" onclick="closeModal()">Cancelar</button>
+                </footer>
             </div>
         </div>
     </main>
@@ -64,6 +90,20 @@
             </tfoot>
         </table>
     </script>
+
+    <!-- Template handlebars del select de productos -->
+    <script id="select-template" type="text/x-handlebars-template">
+        <label>Seleccionar producto</label>
+        <div class="control">
+            <div class="select">
+                <select>
+                    {{# each data }}
+                    <option value="{{ id }}">{{ name }}</option>
+                    {{/ each }}
+                </select>
+            </div>
+        </div>
+    </script>
     {% endraw %}
 </body>
 
@@ -71,6 +111,9 @@
 
 <!-- Componente de la tabla -->
 <script src="/static/js/table.js"></script>
+
+<!-- Componente del select -->
+<script src="/static/js/select.js"></script>
 
 <!-- Funciones para interactuar con el backend -->
 <script src="/static/js/api.js"></script>
