Refactor de modal, id. Agrega handler para guardar
* Agrega api para instancia del modal
* Cambia referencias a los botones para mantener estilos
* Utiliza bulma en lugar de estilos inline
* Agrega handler para guardar un nuevo producto
* Modifica los ids
* Agrega refs a index

--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -16,7 +16,7 @@
 
         <div class="columns">
             <div class="column is-12">
-                <button class="button is-primary is-pulled-right" onclick="Modal.open()">
+                <button class="button is-primary is-pulled-right" onclick="refs.modal.open()">
                     <span class="icon"><i class="fas fa-plus"></i></span>
                     <span>Agregar</span>
                 </button>
@@ -30,9 +30,9 @@
             <div class="modal-background"></div>
             <div class="modal-card">
                 <header class="modal-card-head">
-                    <p id="save_title" class="modal-card-title">Agregar producto</p>
-                    <p id="edit_title" hidden class="modal-card-title">Editar producto</p>
-                    <button class="delete" aria-label="close" onclick="Modal.close()"></button>
+                    <p id="save-title" class="modal-card-title">Agregar producto</p>
+                    <p id="edit-title" hidden class="modal-card-title">Editar producto</p>
+                    <button class="delete" aria-label="close" onclick="refs.modal.close()"></button>
                 </header>
                 <section class="modal-card-body">
                     <form>
@@ -54,9 +54,9 @@
                     </form>
                 </section>
                 <footer class="modal-card-foot">
-                    <button id="save_button" class="button is-success">Guardar</button>
-                    <button id="edit_button" class="button is-success">Editar</button>
-                    <button class="button" onclick="Modal.close()">Cancelar</button>
+                    <button id="save-button" class="button is-success">Guardar</button>
+                    <button id="edit-button" class="button is-warning">Editar</button>
+                    <button class="button" onclick="refs.modal.close()">Cancelar</button>
                 </footer>
             </div>
         </div>
@@ -102,7 +102,7 @@
     <!-- Template handlebars del select de productos -->
     <script id="select-template" type="text/x-handlebars-template">
         <div class="select">
-            <select id="select_prod">
+            <select id="select-prod">
                 <option disabled selected value="">Seleccione un producto</option>
                 {{# each products }}
                     <option value="{{ id }}">{{ name }}</option>
